--- a/EXAM/JS/CHAT_INF.03-02-24.06-SG/styl.css
+++ b/EXAM/JS/CHAT_INF.03-02-24.06-SG/styl.css
@@ -1,4 +1,5 @@
 *{
+    margin: 0;
     font-family: Garamond;
 }
 .container{
@@ -25,4 +26,44 @@ footer{
     background-color: tomato;
     color: white;
     text-align: center;
+}
+img{
+    border-radius: 50%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.chat{
+    border: solid 1px tomato;
+    margin: 15px;
+    height: 470px;
+    overflow:scroll ;
+}
+.jolka, .krzysiek{
+    border-radius: 5px;
+    width: 90%;
+    height: 70px;
+    margin: 2%;
+    padding: 3px;
+}
+.jolka{
+    background-color: #EEE;
+}
+.jolka img{
+    float: left;
+}
+.krzysiek{
+    background-color: #CCC;
+    text-align: right;
+}
+.krzysiek img{
+    float: right;
+}
+button{
+    background-color: tomato;
+    border: solid 1px darkred;
+    padding: 5px;
+    font-weight: bolder;
+}
+input{
+    width: 500px;
 }
